--- a/ansible/templates/kibana.yml.j2
+++ b/ansible/templates/kibana.yml.j2
@@ -2,7 +2,7 @@ server.port: 5601
 server.host: "0.0.0.0"
 server.name: "{{ inventory_hostname }}"
 
-elasticsearch.hosts: ["http://{{ elasticsearch_host }}:9200"]
+elasticsearch.hosts: ["http://{{ elasticsearch_internal_ip }}:9200"]
 
 logging.appenders.file.type: file
 logging.appenders.file.fileName: /var/log/kibana/kibana.log
