--- a/ansible/templates/nginx.conf.j2
+++ b/ansible/templates/nginx.conf.j2
@@ -124,8 +124,8 @@ http {
     send_timeout 30s;
 
     # Hide Nginx version and server info
-    more_clear_headers Server;
-    more_set_headers "Server: WebServer";
+    # more_clear_headers Server;  # Requires nginx-extras package
+    # more_set_headers "Server: WebServer";  # Requires nginx-extras package
 
 {% if nginx_status_enabled | default(false) %}
     # Nginx Status Page
